Revert "#7172: migration to GeoStore 1.8-SNAPSHOT to inherit latest spring compatibility (#7267)" (#7284)
This reverts commit 455323202673c9b799addde8461723b2039efab0.